--- a/build.gradle
+++ b/build.gradle
@@ -728,6 +728,7 @@ project("spring-web") {
 		optional("com.fasterxml.jackson.core:jackson-databind:${jackson2Version}")
 		optional("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${jackson2Version}")
 		optional("com.fasterxml.jackson.dataformat:jackson-dataformat-smile:${jackson2Version}")
+		optional("com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:${jackson2Version}")
 		optional("com.google.code.gson:gson:${gsonVersion}")
 		optional("com.rometools:rome:${romeVersion}")
 		optional("org.eclipse.jetty:jetty-servlet:${jettyVersion}") {
@@ -851,6 +852,7 @@ project("spring-webmvc") {
 		optional("com.fasterxml.jackson.core:jackson-databind:${jackson2Version}")
 		optional("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${jackson2Version}")
 		optional("com.fasterxml.jackson.dataformat:jackson-dataformat-smile:${jackson2Version}")
+		optional("com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:${jackson2Version}")
 		optional("com.rometools:rome:${romeVersion}")
 		optional("javax.el:javax.el-api:${elApiVersion}")
 		optional("org.apache.tiles:tiles-api:${tiles3Version}")
